<resources>
    <string name="app_name">Dior</string>
    <string name="item_hoso"> CHỈNH SỬA HỒ SƠ</string>
    <string name="item_matkhau"> THAY ĐỔI MẬT KHẨU</string>
    <string name="item_the"> THẺ CỦA TÔI </string>
    <string name="item_diachi"> SỔ ĐỊA CHỈ</string>
    <string name="item_khong"> </string>
    <string name="item_dangxuat"> ĐĂNG XUẤT</string>
    <string name="item_huytucach"> HỦY TƯ CÁCH THÀNH VIÊN </string>

    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_close"> Close navigation drawer</string>

    //item top
    <string name="item_top"> TOP</string>
    <string name="item_women"> WOMEN </string>
    <string name="item_men"> MEN </string>
    <string name="item_kids"> KIDS </string>

    //item up
    <string name="item_home"> TRANG CHỦ</string>
    <string name="item_search"> DANH MỤC</string>
    <string name="item_favỏite"> YÊU THÍCH</string>

    <string name="item_qrCode"> THÔNG BÁO</string>
    <string name="item_person"> CÁ NHÂN</string>

    <string name="search_hint">Bạn đang tìm sản phẩm gì?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fast_screen">FastScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="thanh_vien">THÀNH VIÊN</string>
    <string name="lich_su">LỊCH SỬ</string>
    <string name="lich_su_mua_hang">LỊCH SỬ MUA HÀNG</string>
    <string name="lich_su_don_hang">LỊCH SỬ ĐƠN HÀNG</string>
    <string name="cai_dat">CÀI ĐẶT HỒ SƠ</string>
    <string name="chinh_sua_ho_so">CHỈNH SỬA HỒ SƠ</string>
    <string name="chinh_sua_password">THAY ĐỔI MẬT KHẨU</string>
    <string name="so_dia_chi">SỔ ĐỊA CHỈ</string>


    <string name="dang_xuat">ĐĂNG XUẤT</string>

    <string name="product">ÁO THUN DRY-EX CỔ TRÒN NGẮN TAY</string>
    <string name="produt_id">24572</string>
    <string name="gia">399.000</string>
    <string name="tiente"> (CÁC) SẢN PHẨM</string>
    <string name="themproduct">THÊM VÀO GIỎ HÀNG</string>
    <string name="xeday">XE ĐẨY</string>
    <string name="mota">Vải có gân đem lại sự phù hợp hoàn hảo. Được tạo điểm nhấn bởi các sọc và viền diềm</string>
    <string name="sapxep">SẮP XẾP THEO</string>
    <string name="tieubieu">Tiêu biểu</string>
    <string name="thapcao">Giá từ thấp đến cao</string>
    <string name="caothap">Giá từ cao đến thấp</string>
    <string name="loc">LỌC</string>
    <string name="giohang">GIỎ HÀNG</string>


    <string name="tongcong">Tổng cộng:</string>
    <string name="phivanchuyen1">Phí vận chuyển:</string>
    <string name="soluong">Số lượng</string>
    <string name="thue">Đã bao gồm thuế giá trị gia tăng</string>
    <string name="tong">TỔNG ĐƠN ĐẶT HÀNG</string>
    <string name="phieugiamgia">PHIẾU GIẢM GIÁ</string>
    <string name="textthanhtoan">Đặt mua thêm 702.000 VND (bao gồm VAT) để được miễn phí giao hàng.</string>

    <string name="danhmu">DANH MỤC </string>
    <string name="danhmuc">DANH MỤC NỔI BẬT</string>
    <string name="size">Kích thước:</string>
    <string name="tongcongtien">TỔNG: </string>
    <string name="masp">Mã sản phẩm:  </string>
    <string name="timkiem">Bạn đang tìm sản phẩm gì? </string>
    <string name="thanhtoan">THANH TOÁN  </string>

    <string name="textdh">Nhấn đặt hàng để hoàn tất thanh toán  </string>


    <string name="domacngoai">ĐỒ MẶC NGOÀI  </string>
    <string name="aosomi">ÁO SƠ-MI </string>
    <string name="aothun">ÁO THUN </string>
    <string name="quandai"> QUẦN DÀI  </string>
    <string name="quanshort">QUẦN SHORT </string>
    <string name="dam">ĐẦM </string>
    <string name="chanvay">CHÂN VÁY  </string>
    <string name="dolot">ĐỒ MẶC TRONG  </string>
    <string name="domacnha">ĐỒ MẶC NHÀ  </string>
    <string name="aopolo">ÁO POLO </string>
    <string name="spbanchay">SẢN PHẨM NỔI BẬT </string>
    <string name="saleoff">SALE OFF: </string>
    <string name="sanphamsale">SẢN PHẨM GIẢM GIÁ </string>
    <string name="tuychon">1.TÙY CHỌN GIAO HÀNG </string>
    <string name="phuongthuc">2.PHƯƠNG THỨC THANH TOÁN </string>
    <string name="tuychongiao">GIAO ĐẾN ĐỊA CHỈ </string>
    <string name="demo">Hieu Nguyen  </string>
    <string name="demo1">số 1 hẻm 22/135 Chiến Thắng, phường Văn Quán, quận Hà Đông, Hà Nội  </string>
    <string name="ngaygiao">NGÀY GIAO HÀNG </string>
    <string name="phivanchuyen">Phí vận chuyển: 50.000 VND </string>
    <string name="thoigian">Thời gian giao hàng dự kiến: </string>
    <string name="thoigian1">Vui lòng xem thông tin giao hàng trong email được gửi sau khi đơn hàng bắt đầu vận chuyển. Thời gian vận chuyển của các đơn hàng với yêu cầu chỉnh sửa sẽ dài hơn từ 2-4 ngày</string>
    <string name="sanpham">SẢN PHẨM ĐẶT HÀNG </string>

    <string name="phuongthuc1">THANH TOÁN KHI NHẬN HÀNG </string>
    <string name="phuongthuc2">THANH TOÁN ZALOPAY </string>



</resources>