<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loc"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
      >
        <RadioButton
            android:id="@+id/radio_tieu_bieu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tieubieu"
            android:textColor="@color/black"

            android:paddingLeft="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginStart="49dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
        <RadioButton
            android:id="@+id/radio_thap_cao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/thapcao"
            android:paddingLeft="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="49dp"
            android:background="@android:color/darker_gray" />
        <RadioButton
            android:id="@+id/radio_cao_thap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/caothap"
            android:paddingLeft="15dp"/>


    </RadioGroup>


</LinearLayout>