<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/my_Linear_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:background="#F1F1F1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:ignore="NamespaceTypo"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanh_vien"
        android:background="@color/white"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="@drawable/bocong1">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_avatar"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello Baby"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tronghieu@gmail.com"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cai_dat"
            android:padding="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:background="@color/white"/>
        <Button
            android:id="@+id/btn_chinh_sua_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/chinh_sua_ho_so"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_person"
            />
        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/chinh_sua_password"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_baseline_password"
            />
        <Button
            android:id="@+id/btn_change_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/so_dia_chi"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_dia_chi"
            />

    </LinearLayout>

   <LinearLayout
       android:layout_marginTop="15dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:background="@color/white"
       >
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="LỊCH SỬ"
           android:padding="20dp"
           android:textSize="18sp"
           android:textColor="@color/black"
           android:background="@color/white"/>
       <Button
           android:id="@+id/btn_lich_su_don_hang"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:backgroundTint="@color/white"
           android:text="@string/lich_su_don_hang"
           android:textColor="@color/black"
           android:drawableLeft="@drawable/ic_bag_shopping"
           />
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:backgroundTint="@color/white"
           android:text="@string/lich_su_mua_hang"
           android:textColor="@color/black"
           android:drawableLeft="@drawable/ic_bag_shop"
          />
   </LinearLayout>

    <Button
        android:id="@+id/btn_dang_xuat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/dang_xuat"
        android:textColor="@color/black"/>
    </LinearLayout>
    </ScrollView>

</LinearLayout>
