<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp">
        <TextView
            android:id="@+id/tv_ten_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textColor="@color/black"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_id_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/produt_id"
            android:textColor="@color/gray"
            android:layout_marginTop="5dp"
            android:textSize="10sp"/>
        <TextView
            android:id="@+id/tv_cost_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gia"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />


    </LinearLayout>

</LinearLayout>