<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:id="@+id/linear_layout"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".framgentHome.TopFragment">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/danhmuc"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="15dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:stretchColumns="*">

            <TableRow>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_mac_ngoai"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_avatar"
                        android:scaleType="centerCrop"
                        android:padding="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/domacngoai"
                        android:textColor="@color/black"/>
                </LinearLayout>


                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_so_mi"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_avatar"
                        android:padding="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aosomi"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_ao_thun"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_avatar"
                        android:padding="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aothun"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_quan_dai"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_avatar"
                        android:padding="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quandai"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_quan_short"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_avatar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quanshort"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_polo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_avatar"
                        android:padding="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aopolo"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </TableRow>

            <TableRow>


                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_do_mac_nha"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_avatar"
                        android:padding="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/domacnha"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_do_lot"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_avatar"
                        android:padding="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dolot"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </TableRow>


        </TableLayout>


    </LinearLayout>
</ScrollView>