<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:padding="10dp"
        android:background="@color/white">
       <ImageView
           android:id="@+id/img_item_giohang"
           android:layout_width="120dp"
           android:layout_height="120dp"
           android:padding="1dp"
           android:src="@drawable/img1"
           android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_gio_hang_product"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/product"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masp"
                    android:textColor="@color/gray"/>

                <TextView
                    android:id="@+id/tv_ma_product"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:text="2345"
                    android:textColor="@color/gray" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_gioi_tinh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Nam"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_gio_hang_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="XL"
                    android:textColor="@color/black"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_gia_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gia"
                    android:textColor="@color/red"
                    android:textSize="16sp"/>
                <ImageView
                    android:id="@+id/img_giohang_tru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_tru_remove"/>
                <TextView
                    android:id="@+id/tv_so_luong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
                <ImageView
                    android:id="@+id/img_giohang_cong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_cong_add_24"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tongcongtien"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tv_tong_gia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gia"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    android:layout_marginLeft="1dp"/>
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>